<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PronghornWeather</string>
    <string name="hello_world">We are Writing Android Codes!</string>
    <string name="action_settings">Settings</string>
    <string name="pronghornWelcomeText">Pronghorn Weather Report</string>
    <string name="locationInstruct">Enter Location:</string>
    <string name="placeNameButton">Via Place Name</string>
    <string name="placeNameText">Via Place Name</string>
    <string name="viaZipCodeText">Via Zip Code</string>
    <string name="viaGoogleMapsText">Via Google Maps</string>
    <string name="locationSubmitText">Choose</string>
    <string name="zipCodeInputText">Enter Zip Code:</string>
    <string name="getWeatherReport">Fetch Weather Report</string>
    <string name="placeNameInputText">Enter Place Name:</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_place_name">PlaceNameActivity</string>
    <string name="title_activity_zip_code">ZipCodeActivity</string>
    <string name="app_description">        Displays current address and current or updated location using Location Services</string> <!-- User interface labels and strings -->
    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string> <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string> <!-- Menu title -->
    <!-- Labels -->
    <string name="latlng">Lat/Long:</string>
    <string name="address">Address:</string> <!-- Messages -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">        Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">        Location update error. code %1$d message %2$s</string>
    <string name="location_update_missing_update">        Location update error. No incoming location.</string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">        Can\'t request location updates, previous request hasn\'t finished</string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="connection_error_code">Connection failure error code: %1$d</string>
    <string name="connection_error_disabled">Google Play services is disabled</string>
    <string name="connection_error_internal">An internal error occurred</string>
    <string name="connection_error_invalid">The version of Google Play services on this device is not authentic</string>
    <string name="connection_error_invalid_account">The specified account name is invalid</string>
    <string name="connection_error_license_check_failed">The app is not licensed to the user</string>
    <string name="connection_error_message">Connection failure error message: %1$s</string>
    <string name="connection_error_misconfigured">The application is misconfigured</string>
    <string name="connection_error_missing">Google Play services is missing</string>
    <string name="connection_error_needs_resolution">Additional resolution is required</string>
    <string name="connection_error_network">A network error occurred</string>
    <string name="connection_error_outdated">Google Play services is out of date</string>
    <string name="connection_error_sign_in_required">The user is not signed in</string>
    <string name="connection_error_unknown">An unknown error occurred</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>