<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000"
        android:padding="5dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="horizontal|vertical" > 

        <TextView
            android:id="@+id/textInstruct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcomeTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/locationInstruct"
            android:textColor="#C2D6DD"
            android:textSize="25sp" />

        <RadioGroup
            android:id="@+id/radioGrouped"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textInstruct"
            android:layout_below="@+id/textInstruct"
            android:layout_marginTop="42dp"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/placeNameText"
                android:textColor="#C2D6DD"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/radioButton1"
                android:layout_below="@+id/radioButton1"
                android:layout_marginTop="26dp"
                android:gravity="center"
                android:text="@string/viaZipCodeText"
                android:textColor="#C2D6DD"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/radioButton2"
                android:layout_below="@+id/radioButton2"
                android:layout_marginTop="33dp"
                android:text="@string/viaGoogleMapsText"
                android:textColor="#C2D6DD"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/pronghornWelcomeText"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#34788F"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/locationChoiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textInstruct"
            android:layout_alignRight="@+id/radioGrouped"
            android:layout_below="@+id/radioGrouped"
            android:layout_marginTop="20dp"
            android:text="@string/locationSubmitText"
            android:textSize="20sp" />
    </RelativeLayout>

</ScrollView>